--- a/src/components/ui/grid/css/GridOnHover.css
+++ b/src/components/ui/grid/css/GridOnHover.css
@@ -1,12 +1,11 @@
 .container {
   position: relative;
-  height: 300px;
 }
 
 .image {
   display: block;
   width: 100%;
-  height: 300px;
+  height: 100%;
 
   object-fit: cover;
 }
