--- a/src/components/ui/grid/css/GridOnHover.css
+++ b/src/components/ui/grid/css/GridOnHover.css
@@ -16,7 +16,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  height: 300px;
+  height: 100%;
   width: 100%;
   opacity: 0;
   transition: 0.7s ease;
@@ -29,7 +29,7 @@
 
 .text {
   color: black;
-  font-size: 20px;
+
   position: absolute;
   top: 50%;
   left: 50%;
