--- a/src/components/ui/grid/css/GridOnHover.css
+++ b/src/components/ui/grid/css/GridOnHover.css
@@ -6,7 +6,6 @@
   display: block;
   width: 100%;
   height: 100%;
-
   object-fit: cover;
 }
 
@@ -20,16 +19,15 @@
   width: 100%;
   opacity: 0;
   transition: 0.7s ease;
-  background-color: #ffffff;
+  background-color: #080808;
 }
 
 .container:hover .overlay {
-  opacity: 0.7;
+  opacity: 0.6;
 }
 
 .text {
-  color: black;
-
+  color: white;
   position: absolute;
   top: 50%;
   left: 50%;
